--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "firebase": "^9.14.0",
+    "crypto-js": "^4.1.1",
+    "firebase": "^10.0.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
