pattern og phonenumber works
fixed the whole wherepage so the pattern is implemented in the wherepage and the phonenumber component is fixed so we get the data from it now

--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "libphonenumber-js": "^1.10.38",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-phone-number-input": "^3.2.23",
+    "react-phone-number-input": "^3.3.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/react-phone-number-input": "^3.0.14"
   }
 }
