made a button that downloads the reports as pdf's
the pdf is not done! need the rest from damage information and down

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "autoprefixer": "10.4.14",
     "crypto-js": "^4.1.1",
     "firebase": "^10.0.0",
+    "jspdf": "^2.5.1",
     "libphonenumber-js": "^1.10.39",
     "next": "13.4.4",
     "postcss": "8.4.24",
+    "puppeteer": "^21.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-phone-number-input": "^3.3.1",
