--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/react-phone-number-input": "^3.0.14"
   }
 }
