--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jspdf": "^2.5.1",
     "libphonenumber-js": "^1.10.39",
     "next": "13.4.4",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.24",
     "puppeteer": "^21.1.0",
     "react": "18.2.0",
