--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "firebase": "^10.0.0",
     "jspdf": "^2.5.1",
@@ -33,7 +34,9 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
+    "@types/nodemailer": "^6.4.9",
     "@types/react-phone-number-input": "^3.0.14"
   }
 }
