--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "cors": "^2.8.5",
+    "axios": "^1.5.0",
     "crypto-js": "^4.1.1",
     "firebase": "^10.0.0",
     "jspdf": "^2.5.1",
     "libphonenumber-js": "^1.10.39",
     "next": "13.4.4",
-    "nodemailer": "^6.9.4",
     "postcss": "8.4.24",
     "puppeteer": "^21.1.0",
     "react": "18.2.0",
@@ -37,6 +36,7 @@
     "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
     "@types/nodemailer": "^6.4.9",
-    "@types/react-phone-number-input": "^3.0.14"
+    "@types/react-phone-number-input": "^3.0.14",
+    "nodemailer": "^6.9.4"
   }
 }
