completely done with the pdf

--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "jspdf": "^2.5.1",
     "libphonenumber-js": "^1.10.39",
     "next": "13.4.4",
+    "piexifjs": "^1.0.6",
     "postcss": "8.4.24",
     "puppeteer": "^21.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-phone-number-input": "^3.3.1",
+    "sharp": "^0.32.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
