--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.5.0",
     "crypto-js": "^4.1.1",
     "firebase": "^10.0.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "libphonenumber-js": "^1.10.39",
     "next": "13.4.4",
