--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
     "crypto-js": "^4.1.1",
-    "firebase": "^10.0.0",
+    "firebase": "^10.3.1",
+    "firebase-admin": "^11.10.1",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "libphonenumber-js": "^1.10.39",
     "next": "13.4.4",
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
+    "@types/js-cookie": "^3.0.3",
     "@types/nodemailer": "^6.4.9",
     "@types/react-phone-number-input": "^3.0.14",
     "nodemailer": "^6.9.4"
