--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
     "crypto-js": "^4.1.1",
+    "exif-js": "^2.3.0",
     "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
     "html2canvas": "^1.4.1",
