--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "axios": "^1.5.0",
     "crypto-js": "^4.1.1",
     "exif-js": "^2.3.0",
-    "firebase": "^10.3.1",
+    "firebase": "^10.4.0",
     "firebase-admin": "^11.10.1",
+    "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
